--- a/ProjectDivulga/app/src/main/AndroidManifest.xml
+++ b/ProjectDivulga/app/src/main/AndroidManifest.xml
@@ -10,13 +10,24 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".EstablishmentShow"
+            android:label="@string/title_activity_establishment_show"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="divulga.com.br.projectdivulga.MainActivity" />
         </activity>
     </application>
 
