--- a/ProjectDivulga/app/build.gradle
+++ b/ProjectDivulga/app/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+
     compile 'io.realm:realm-android:0.82.1'
 }
