--- a/ProjectDivulga/app/src/main/AndroidManifest.xml
+++ b/ProjectDivulga/app/src/main/AndroidManifest.xml
@@ -28,8 +28,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -61,6 +59,19 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="divulga.com.br.projectdivulga.EstablishmentShow" />
+        </activity>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".CustomProgressDialog"
+                    android:theme="@style/Theme.AppCompat.Light.Dialog">
+
         </activity>
     </application>
 
