--- a/ProjectDivulga/app/src/main/AndroidManifest.xml
+++ b/ProjectDivulga/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:name=".MainAplication"
@@ -73,6 +76,13 @@
                     android:theme="@style/Theme.AppCompat.Light.Dialog">
 
         </activity>
+
+        <receiver android:name=".Utils.WifiReceiver" >
+            <intent-filter android:priority="100">
+                <action android:name="android.net.wifi.STATE_CHANGE" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
